@@ -2,6 +2,9 @@ v1.4.1 - TBD
 NEW:
   Added 2 commands to ADDSynthCore that help in determining the number of ore blocks
     in a given area. Mostly useful to developers.
+  Added furnace smelting recipes for the Energy Crystal and Steel Ingots, so these can be
+    automated using electric furnaces from other mods.
+    - But using the Blast Furnace is still more efficient if you're not getting free energy.
 FIXED:
   Fixed Fusion Chamber not dropping when mined.
   Fixed Ores that drop an item not being affected by Pickaxes with the Fortune effect.
